--- a/SouthwestRides/SouthwestRides.csproj
+++ b/SouthwestRides/SouthwestRides.csproj
@@ -19,14 +19,21 @@
     <None Remove="Controllers\" />
     <None Remove="Models\Ride" />
     <None Remove="Middleware\" />
-    <None Remove="Data\" />
+    <None Remove="Repositories\" />
+    <None Remove="Repositories\Interfaces\" />
+    <None Remove="Services\Interfaces\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
     <Folder Include="Middleware\" />
-    <Folder Include="Data\" />
+    <Folder Include="Repositories\" />
+    <Folder Include="Repositories\Interfaces\" />
+    <Folder Include="Services\Interfaces\" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Ride.cs" />
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
+
 </Project>
