Change app name to SoutheastRides from SouthwestRides

--- a/SouthwestRides/Properties/launchSettings.json
+++ b/SouthwestRides/Properties/launchSettings.json
@@ -36,6 +36,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "SoutheastRides": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:23086;http://localhost:37280",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
