--- a/SoutheastRidesTests/SoutheastRidesTests.csproj
+++ b/SoutheastRidesTests/SoutheastRidesTests.csproj
@@ -21,10 +21,25 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Moq" Version="4.16.1" /> <!-- Added reference to Moq -->
+    <PackageReference Include="Mongo2Go" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SoutheastRides\SoutheastRides.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="UnitTests\" />
+    <None Remove="UnitTests\Common\" />
+    <None Remove="UnitTests\ControllersTests\" />
+    <None Remove="UnitTests\RepositoryTests\" />
+    <None Remove="UnitTests\ServicesTests\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="UnitTests\" />
+    <Folder Include="UnitTests\Common\" />
+    <Folder Include="UnitTests\ControllersTests\" />
+    <Folder Include="UnitTests\RepositoryTests\" />
+    <Folder Include="UnitTests\ServicesTests\" />
+  </ItemGroup>
 </Project>
